--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Adi\\AppData\\Local\\Temp\\ipykernel_6496\\3353965664.py:3: DtypeWarning: Columns (9,10,11,14,15,16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Adi\\AppData\\Local\\Temp\\ipykernel_10448\\3353965664.py:3: DtypeWarning: Columns (9,10,11,14,15,16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(\"https://raw.githubusercontent.com/amankharwal/Website-data/master/electricity.csv\")\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data.dropna()"
+    "new_data = data.dropna()"
    ]
   },
   {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -213,33 +213,88 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "correaltions = data.corr(method='pearson')\n",
+    "correaltions = new_data.corr(method='pearson')\n",
     "plt.figure(figsize=(20,12))\n",
     "sns.heatmap(correaltions, cmap=\"coolwarm\", annot=True)\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check rows & cols :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'itertools.count' object has no attribute 'axes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Adi\\Desktop\\Data_Science_Project\\model_build.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Adi/Desktop/Data_Science_Project/model_build.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rows \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39;49maxes[\u001b[39m0\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Adi/Desktop/Data_Science_Project/model_build.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m cols \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39maxes[\u001b[39m1\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'itertools.count' object has no attribute 'axes'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37682\n",
+      "18\n"
      ]
     }
    ],
    "source": [
-    "rows = len(data.axes[0])\n",
-    "cols = len(data.axes[1])"
+    "rows = len(new_data.axes[0])\n",
+    "cols = len(new_data.axes[1])\n",
+    "\n",
+    "print(rows)\n",
+    "print(cols)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 37682 entries, 0 to 38013\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   DateTime                37682 non-null  object \n",
+      " 1   Holiday                 37682 non-null  object \n",
+      " 2   HolidayFlag             37682 non-null  int64  \n",
+      " 3   DayOfWeek               37682 non-null  int64  \n",
+      " 4   WeekOfYear              37682 non-null  int64  \n",
+      " 5   Day                     37682 non-null  int64  \n",
+      " 6   Month                   37682 non-null  int64  \n",
+      " 7   Year                    37682 non-null  int64  \n",
+      " 8   PeriodOfDay             37682 non-null  int64  \n",
+      " 9   ForecastWindProduction  37682 non-null  float64\n",
+      " 10  SystemLoadEA            37682 non-null  float64\n",
+      " 11  SMPEA                   37682 non-null  float64\n",
+      " 12  ORKTemperature          37682 non-null  float64\n",
+      " 13  ORKWindspeed            37682 non-null  float64\n",
+      " 14  CO2Intensity            37682 non-null  float64\n",
+      " 15  ActualWindProduction    37682 non-null  float64\n",
+      " 16  SystemLoadEP2           37682 non-null  float64\n",
+      " 17  SMPEP2                  37682 non-null  float64\n",
+      "dtypes: float64(9), int64(7), object(2)\n",
+      "memory usage: 5.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
